# music_catch

./: .env  .env.example  BACKEND_AUTH_MIGRATION_SUMMARY.md  BACKEND_IMPLEMENTATION_SUMMARY.md  JWT_DATA_FETCH_IMPLEMENTATION.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  supabase-schema.sql  tailwind.config.ts  vite.config.ts
backend/: README.md
backend/cpp-streaming-service/: CMakeLists.txt  Dockerfile  README.md  build_wasm.sh
backend/cpp-streaming-service/src/: fast_audio_processor.cpp  streaming_server.cpp
client/: App.tsx  global.css
client/components/: ActivityFeed.tsx  AudioPerformanceMonitor.tsx  AuthRouter.tsx  AvailabilityChecker.tsx  EnhancedMiniPlayer.tsx  FastLoader.tsx  LikeButton.tsx  MiniPlayer.tsx  MobileFooter.tsx  MongoLoginForm.tsx  MongoProfile.tsx  MongoSignUpForm.tsx  MusicCatchLogo.tsx  PasswordStrengthIndicator.tsx  PlaceholderPage.tsx  PlaylistManager.tsx  QuickSongSearch.tsx  ThemeToggle.tsx
client/context/: AudioPlayer.tsx  AuthContext.tsx  EnhancedMusicContext.tsx  FirebaseContext.tsx  FriendsActivity.tsx  MusicContext.tsx  MusicContextSupabase.tsx  PlaybackControls.tsx  ProfileContext.tsx  SocialContext.tsx  SocketContext.tsx  ThemeContext.tsx
client/hooks/: use-fast-audio.ts
client/lib/: api-enhanced.ts  api-utils.ts  api.ts  auth-complete.ts  auth-errors.ts  auth-mongodb.ts  auth-response.ts  auth.ts  backend.ts  connectivity.ts  fast-audio-engine.ts  firebase-settings.ts  (+13 more)
public/: fast-audio-worklet.js  fast_audio.js  fast_audio_worker.js
server/: index.ts  node-build.ts
shared/: api.ts
(+78 files in other folders)
